<resources>
    <string name="app_name">ListAnime</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample Title</string>
    <string name="text_episode">TV (10 eps)</string>

    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title_favorite">Favorite</string>
    <string name="favorite_fab">Favorite FAB</string>
    <string name="score">SCORE</string>
    <string name="n_a_score">N/A</string>
    <string name="ranked_n_a">Ranked N/A</string>
    <string name="popularity_n_a">Popularity #N/A</string>
    <string name="members_n_a">Members N/A</string>
    <string name="season_null">null</string>
    <string name="type_null">null</string>
    <string name="studio_null">null</string>
    <string name="information">Information</string>
    <string name="synopsis">Synopsis</string>
    <string name="text_synopsis">Text Synopsis</string>
    <string name="background">Background</string>
    <string name="text_background">Text Background</string>
</resources>