<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.DetailAnimeActivity"
    android:layout_marginTop="16dp"
    tools:showIn="@layout/activity_detail_anime">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingStart="1dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/tv_score_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:textStyle="bold"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_score_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_a_score"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#919191"
                    android:layout_marginEnd="8dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_ranked"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ranked_n_a"
                            android:textSize="12sp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="8dp"/>

                        <TextView
                            android:id="@+id/tv_popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popularity_n_a"
                            android:textSize="12sp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="8dp"/>

                        <TextView
                            android:id="@+id/tv_members"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/members_n_a"
                            android:layout_marginTop="1dp"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_season"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/season_null"
                            android:textSize="12sp"
                            android:layout_marginEnd="8dp"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#919191"
                            android:layout_marginEnd="8dp"/>

                        <TextView
                            android:id="@+id/tv_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type_null"
                            android:textSize="12sp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="1dp"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#919191"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="1dp"/>

                        <TextView
                            android:id="@+id/tv_studio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/studio_null"
                            android:textSize="12sp"
                            android:layout_marginBottom="1dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/information"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_anime_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Text Information"
                    android:lineSpacingExtra="4dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/synopsis"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#919191"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_synopsis"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/background"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#919191"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <TextView
            android:id="@+id/tv_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_background"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
